# Kratos-Engine

./: CMakeLists.txt  create.bat
base/: header_private.hpp  source.cpp
src/core/math/: vec2.hpp  vec3.hpp
src/platform/internal/: windows.cpp  windows.hpp
